# boiler-gltf

./: .gitignore  CMakeLists.txt
src/: gltf.cpp  gltf.h  main.cpp  modelaccessors.cpp  modelaccessors.h  typedaccessor.h
